--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body, html {
-    margin: 0;
-    padding: 0;
+    margin: 10%;
+    padding: 5%;
     font-family: Arial, sans-serif;
+    background: #1e1e1e
 }
 
 .container {
@@ -17,11 +18,12 @@ body, html {
 
 .header p {
     font-size: 16px;
-    color: #666;
+    color: white;
+    background-color: black;
 }
 
 .error-icon img {
-    width: 5px;
+    width: 20px;
 }
 
 .message h2 {
