--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body, html {
     margin: 10%;
     padding: 5%;
     font-family: Arial, sans-serif;
-    background: #1e1e1e
+    background: #1e1e1e;
 }
 
 .container {
