--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body, html {
 
 .container {
     width: 50%;
-    background: #2c2f33;
+    background: #1e1e1e;
     border-radius: 10px;
     box-shadow: 0 10px 25px rgba(0,0,0,0.5);
     padding: 20px;
@@ -21,11 +21,11 @@ body, html {
 
 .header h1 {
     font-size: 32px;
-    color: #e63946;
+    color: #fff;
 }
 
 .header p {
-    font-size: 16px;
+    font-size: 26px;
     color: #f1faee;
 }
 
@@ -40,7 +40,7 @@ body, html {
 }
 
 .message p {
-    color: #f4a261;
+    color: #fff;
     font-size: 16px;
     line-height: 1.6;
     margin-bottom: 20px;
